# claude-trade-assistant

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  config.example.yaml  install.cmd  pyproject.toml  requirements.txt
examples/: sample_watchlist.txt
examples/dashboard/: index.html
src/claude_trade_assistant/: __init__.py  cli.py  config.py  models.py
src/claude_trade_assistant/assistant/: claude_client.py
src/claude_trade_assistant/news/: briefing.py
src/claude_trade_assistant/providers/: base.py  finnhub_provider.py  yfinance_provider.py
src/claude_trade_assistant/scanner/: gap.py  premarket.py
src/claude_trade_assistant/tradingview/: pine.py
src/claude_trade_assistant/webhook/: server.py
tests/: test_gap.py
