[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-trade-assistant"
version = "0.1.0"
description = "Claude-powered pre-market scanner, gap scanner & news briefing, and TradingView webhook bridge for traders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aj-2-c-2-a" }]
keywords = [
  "tradingview", "trading", "stocks", "claude", "anthropic", "ai",
  "pre-market", "gap-scanner", "stock-scanner", "webhook", "pine-script",
  "market-news", "fintech", "quant", "watchlist", "day-trading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "anthropic>=0.40",
  "yfinance>=0.2.40",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
cta = "claude_trade_assistant.cli:app"

[project.urls]
Homepage = "https://github.com/aj-2-c-2-a/claude-trade-assistant"
Repository = "https://github.com/aj-2-c-2-a/claude-trade-assistant"
Issues = "https://github.com/aj-2-c-2-a/claude-trade-assistant/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
